[2단계 - 블랙잭 베팅] 투다(박찬양) 미션 제출합니다 (#863)
* docs: 초기 요구사항 및 목표 작성

* test: 카드 생성 테스트 추가

원래는 카드 뽑기 정책 테스트였으나, 더 작은 단위가 생겨서 카드 생성 테스트부터 다시 시작하였습니다

* test: 덱 생성 테스트 추가

동일한 논리로 CardTest -> DeckTest로 옮겨갔습니다

* feat: 블랙잭 덱 생성기 구현

* feat: 블랙잭 카드 생성 기능 추가

* test: 덱에서 카드가 부족할 시 뽑는 경우 예외 발생 테스트 케이스 추가

* feat: 카드의 합 버스트 판별 로직 추가

* chore: 테스트 완료 코드 이전 및 deque로 변경

카드 덱의 의도를 나타내기에 deque가 더 낫다고 판단하였습니다

* refactor: 사용하지 않는 코드 삭제

* refactor: deque로 변경

* feat: 플레이어는 카드를 받을 수 있다 구현

* refactor: 사용하지 않는 코드 삭제

* feat: 딜러의 카드 뽑기 조건 구현

* refactor: 중복 코드 제거를 위해 추상 클래스 활용함에 따른 DrawPolicy 제거

중복 코드를 위해 상속을 사용하는것은 지양해야하지만 완전한 is-A 관계이기 때문에 도입해도 상관없을 것이라 판단하였습니다

* feat: 에이스가 존재하는 경우 최적의 해로 적용하는 기능 구현

* feat: 플레이어가 2-8명이아니면 예외가 발생한다

* feat: 플레이어는 닉네임을 가지도록 구현

* feat: 플레이어는 두 장의 카드를 지급받는다

* feat: 딜러는 두 장을 받고 한장만 오픈한다

* feat: 플레이어 블랙잭 결과 반환 기능 추가

* feat: 딜러 블랙잭 결과 반환 기능 추가

* feat: 게임 승패 계산 구현

* chore: 테스트 완료 코드 이전

* refactor: 컨벤션에 맞지 않는 코드 수정

* feat: 블랙잭 컨트롤러 연결

* feat: 승리 조건 버스트인 케이스 추가

* docs: 구현한 기능 명세 업로드

* refactor: 명명 수정

* refactor: 사용하지 않는 함수 및 컨벤션 수정

* docs: 협력 관계 다이어그램 추가

* fix: 상속위한 필드 static 선언

* refactor: 컨벤션 수정

* docs: 질문 추가

* refactor: 사용하지 않던 코드 삭제

* docs: README 작성

* docs: README 작성

* docs: README 작성

* refactor: BlackjackParticipants 추상화에 의존하도록 수정

* fix: bust 조건 확인을 간접적으로하던 코드 직접적으로 하도록 수정

* fix: 중복된 이름 넣을 수 없도록 수정

* fix: 플레이어가 딜러 이름 가질 수 없도록 수정

* fix: 딜러가 버스트일때 플레이어가 버스트 아닌경우 플레이어 패배로 출력되던 버그 수정

* refactor: 상수 임을 명확하게 하기 위해 인스턴스가 한번만 사용되더라도 상수에 static 추가

* chore: 테스트용 전략패턴 패키지 이전

* refactor: 전략패턴 인터페이스의 validate 제거

* refactor: 전략패턴 인터페이스의 validate 제거

* refactor: 좀더 방어적으로 api 제공하도록 수정

* refactor: 디미터 법칙 지켜지지 않던 일부 코드 수정

* refactor: 책임을 좀 더 잘 나타내는 명명 수정

* refactor: 제네릭 명명 T -> E(컬렉션 요소이기 때문에)

* refactor: 매직넘버 제거

* refactor: Dealer도 추상화에 의존하도록 수정

* refactor: 인터페이스 생성자 외부에서 접근하지 못하도록 수정 public -> protected

* refactor: 참여자를 관리하는것은 BlackjackGame의 책임이 아닌, BlackjackParticipantsManager의 책임이다

* refactor: 불필요한 제네릭 삭제

* refactor: 항상 기본값아닌 기