@@ -1,10 +1,8 @@
 package domain.participant;
 
 import domain.blackjackgame.TrumpCard;
-import domain.except.BlackJackStateException;
 import exception.BlackJackException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -13,7 +11,6 @@ import java.util.stream.Collectors;
 public class BlackjackParticipantsManager {
 
     private static final String INVALID_PLAYER = "존재하지 않는 플레이어입니다.";
-    private static final String INVALID_HANDS_STATE = "아직 카드를 받지 않은 참여자입니다.";
     private static final String DUPLICATE_NAME = "중복된 이름이 존재합니다.";
 
     private final List<BlackjackParticipant> players;
@@ -46,23 +43,8 @@ public class BlackjackParticipantsManager {
                 .collect(Collectors.toList());
     }
 
-    public List<TrumpCard> playerCards(String name) {
-        return Collections.unmodifiableList(findPlayer(name).cardHands());
-    }
-
-    public List<TrumpCard> dealerCards() {
-        return Collections.unmodifiableList(dealer.cardHands());
-    }
-
-    private void validateEmptyCards(List<TrumpCard> trumpCards) {
-        if (trumpCards.isEmpty()) {
-            throw new BlackJackStateException(INVALID_HANDS_STATE);
-        }
-    }
-
     public TrumpCard firstDealerCards() {
-        validateEmptyCards(dealerCards());
-        return dealer.cardHands().get(0);
+        return dealer.hands().getFirst();
     }
 
     public int calculateCardSum(String name) {
@@ -94,5 +76,26 @@ public class BlackjackParticipantsManager {
 
     public boolean dealerDrawable() {
         return dealer.isDrawable();
+    }
+
+    public BlackjackHands playerHands(String name) {
+        return findPlayer(name).hands();
+    }
+
+    public List<TrumpCard> dealerCards() {
+        return dealer.cards();
+    }
+
+    public List<TrumpCard> playerCards(String name) {
+        return findPlayer(name).cards();
+    }
+
+    public BlackjackHands dealerHands() {
+        return dealer.hands();
+    }
+
+    public BlackjackBet playerBet(String name) {
+        BlackjackParticipant player = findPlayer(name);
+        return player.bet();
     }
 }
